--- a/ex03/package.json
+++ b/ex03/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.9"
   }
 }
