--- a/ex01-create-server/package.json
+++ b/ex01-create-server/package.json
@@ -2,11 +2,11 @@
   "name": "ex01-create-sv",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "Rachata Singkhet",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "description": ""
 }
